  o dcCallF(), dcVCallF(), dcArgF() and dcVArgF() don't implicitly call dcReset()
    anymore, which was unflexible (breaking change)
  o added macros to feature test implementation for aggregate-by-value and syscall support
  o windows/x64/masm directives added to specify how stack unwinds (help for
    debuggers, exception handling, etc.; thanks Raphael Luba)
dyncallback:
  o new, portable aggregate-by-value callback argument interface
  o aggregate-by-value (struct, union) support for x64 (win and sysv; thanks Raphael Luba!)
  o x64/windows masm directives for frame unwinding information (as dbg help; thanks Raphael Luba!)
  o sparc64 callback crash fix
dynload:
  o build fix for ReactOS with RosBE/cmake/mingw-make environment
general:
  o more robust detection of platform endianness (on some platforms inclusion
    of endian.h led to wrong assumptions)
tests:
  o call_suite: simplified and extended to test also unsigned types, and _Bool
  o callback_suite: refactored to be much more like call_suite test
  o call_suite_aggrs: new test suite for calls with aggregate arguments and
    return types (structs, unions and arrays as aggregate members)
  o callback_suite_aggrs: new test suite, like call_suite_aggrs but for callbacks
  o plain_c++: added non-trivial C++ aggregate tests
  o callback_plain_c++: new test, focusing on methods and non-trivial C++ aggregates
  o simplifications and major refactoring to share more code (especially
    signature and case generator) across test suites
  o dynload_plain: simplified build and robustness fixes on some platforms
buildsys:
  o ./configure output for sun make builds: set correct C++ compiler flag var
  o ./configure for SunOS now uses isainfo(1) to deduce native instruction set
doc:
  o callconv section additions about aggregate-by-value passing for all platforms
  o new Linux-Std-Base-specific PPC32/SysV section, as aggregate retval handling differs from
    default SysV for such systems